# restoration-zonal-diff

./: .editorconfig  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  mkdocs.yml  package.json  pyproject.toml
.github/workflows/: audit-layout.yml  ci.yml  pages.yml
benchmarks/: test_bench.py
docs/: index.md
docs/adr/: 0001-architecture.md
docs/stylesheets/: extra.css
src/restoration_zonal_diff/: __init__.py  cli.py  coefficients.py  diff.py  montecarlo.py  streamer.py  zones.py
tests/data/: teeb_coefficients.csv
tests/integration/: test_pipeline.py
tests/unit/: test_coefficients.py  test_diff.py  test_montecarlo.py  test_streamer.py
tools/: audit-layout.mjs
web/: README.md  index.html
