[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "restoration-zonal-diff"
version = "0.1.0"
description = "Streaming, Monte Carlo-propagated per-zone zonal-diff over baseline and scenario rasters for nature restoration assessment."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Daud Tasleem" }]
dependencies = ["numpy>=1.24", "pandas>=2.0"]

[project.optional-dependencies]
io = ["rasterio>=1.3", "shapely>=2.0", "fiona>=1.9"]
cli = ["typer>=0.12"]
dev = ["pytest>=8", "pytest-benchmark>=4", "ruff>=0.6", "mypy>=1.10", "mkdocs>=1.6", "mkdocs-material>=9", "pip-audit>=2.7"]

[project.scripts]
restoration-zonal-diff = "restoration_zonal_diff.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/restoration_zonal_diff"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/restoration_zonal_diff/cli.py" = ["B008"]

[tool.mypy]
strict = true
python_version = "3.10"
files = ["src/restoration_zonal_diff"]

[[tool.mypy.overrides]]
module = ["pandas", "fiona", "rasterio", "rasterio.features", "typer"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["restoration_zonal_diff.cli"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
